--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
 	"exports": {
 		".": {
 			"types": "./index.d.ts",
-			"import": "./index.js",
-			"require": "./index.cjs"
+			"import": "./index.js"
 		}
 	}
 }
