--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
 	"exports": {
 		".": {
 			"types": "./index.d.ts",
-			"import": "./index.js"
+			"import": "./index.js",
+      "require": "./index.cjs"
 		}
 	}
 }
